src/app/components/technologies/technologies.component.css
.mob {
  background-image: url(../../../assets/images/technologies_component/mobile.png), url(../../../assets/images/technologies_component/computer.png);
  background-repeat: no-repeat, no-repeat;
  background-position: left, right;

}

img.img-fluid{


}
.height_technologies{


  height: 363px;
}
div.card {

  margin-right: 0;
}
.absolute_center
{


  overflow: no-display;
  width: 100%;
  z-index: 2;


  position: absolute;

}
 .card-body:hover .one {
width: 50px;

 }

.demo{
  margin:0 auto;
  width: 55px;
position: relative;
  height: 55px;
  display: block;

  /*
    position:relative;
    margin:0 auto;
    width: 50px;
    height: 50px;
    display: inline-block;
    */
}
.position_in_table {
  left: 80px;
  top: 120px;

}
.position_in_table2{
  left: 70px;
  top: 150px;
width: auto;
  height: auto;
}
.position_in_table3{
  left: 270px;
  top: 150px;
  width: 280px;
  height: auto;
}
.position_in_table4{
  left: 630px;
  top: 150px;
   width: auto;
  height: auto;
}
.demo img {
  left: 0;
  position:absolute;
  top: 0;
}

.demo img.raz {opacity:0;filter:alpha(opacity=0);}
.demo:hover img.raz {

  opacity:1;filter:alpha(opacity=100);}
.demo:hover img.dva, .demo img.dva:hover
{
  opacity:0;
  filter:alpha(opacity=0);
}
.demo img {
  -moz-transition: all 0.5s ease-in-out;
  -webkit-transition: all 0.5s ease-in-out;
  -o-transition: all 0.5s ease-in-out;
  transition: all 0.5s ease-in-out;
}
.demo img.raz {
  -moz-transform:scale(0);
  -webkit-transform:scale(0);
  -o-transform:scale(0);
  -ms-transform:scale(0);
}

.demo:hover img.raz {
  -moz-transform:scale(1);
  -webkit-transform:scale(1);
  -o-transform:scale(1);
  -ms-transform:scale(1);
}

.demo:hover img.dva {
  -moz-transform:scale(0);
  -webkit-transform:scale(0);
  -o-transform:scale(0);
  -ms-transform:scale(0);
}




.center-img {
  display: block;
 width: 30%;

}
.text{
  left: 30%;
top: 5%;

}
.text-center h4{

  position	: absolute;
  top		: 32px;
  left		: 0;
  width: 100%;
}


h6{
text-align: left;
  position	: absolute;
  top		: 152px;
  left		: 50px;
  width: 100%;
}
h6 span {
  color			: white;
  font			: bold 24px/45px Helvetica, Sans-Serif;
  letter-spacing		: -1px;
  background		: rgb(0, 0, 0); /* на случай, если следующая строка не сработает */
  background		: rgba(0, 0, 0, 0.7);
  padding			: 10px;
}


.category_font{

  font-size: 18px;
  color: #2d527c;
  letter-spacing: .4px;
  line-height: 1.5;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;

  font-weight: 400;
}


.header_position{

  font-size: 24px;
  color: #2d527c;
  letter-spacing: .4px;
  line-height: 1.5;
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Open Sans, Helvetica Neue, sans-serif;

  font-weight: 600;
  top		: 28px; left: 380px;
}

@media  (max-width: 800px) {
  .modal-content1{

    width: 100%;

  }


}
.card{
  background-color: rgba(255, 255, 255, 0.6);
width: 100%;
border-radius: 10px;
}

.card-body{
  display: inline-flex;
}

